src/ext/machnet.h

/**
 * @brief Descriptor for SG data that constitute a message.
 *
 * This structure resembles `struct iovec` (check writev(2)).
 */
struct MachnetIovec {
  void *base;  ///< Pointer to the beginning of the SG data.
  size_t len;  ///< Length of the SG data.
};