src/ext/machnet_common.h

typedef uint32_t MachnetRingSlot_t;
// This is the abstraction of a network flow for the applications. It is
// equivalent to the 5-tuple, with just the protocol missing (UDP is always
// assumed). This structure is used to indicate the sender or receiver of a
// message (depending on the direction). Equivalent to `struct sockaddr_in'.
struct MachnetFlow {
  uint32_t src_ip;
  uint32_t dst_ip;
  uint16_t src_port;
  uint16_t dst_port;
};
typedef struct MachnetFlow MachnetFlow_t;
struct MachnetChannelDataCtx {
  size_t stats_ofs;
  size_t ctrl_sq_ring_ofs;
  size_t ctrl_cq_ring_ofs;
  size_t machnet_ring_ofs;
  size_t app_ring_ofs;
  size_t buf_ring_ofs;
  size_t buf_pool_ofs;
  size_t buf_pool_mask;
  uint32_t buf_size;
  uint32_t buf_mss;
} __attribute__((aligned(CACHE_LINE_SIZE)));
typedef struct MachnetChannelDataCtx MachnetChannelDataCtx_t;
struct MachnetChannelCtrlCtx {
  // Mutex for protecting the control queue.
  size_t req_id;
} __attribute__((aligned(CACHE_LINE_SIZE)));
typedef struct MachnetChannelCtrlCtx MachnetChannelCtrlCtx_t;
/**
 * The `MachnetChannelCtx' holds all the metadata information (context) of an
 * Machnet Channel.
 *
 * It is always located at the beginning of the shared memory area.
 */
struct MachnetChannelCtx {
#define MACHNET_CHANNEL_CTX_MAGIC 0xA5A5A5A5
  uint32_t magic;  // Magic value tagged after initialization.
#define MACHNET_CHANNEL_VERSION 0x01
  uint16_t version;
  uint64_t size;  // Size of the Channel's memory, including this context.
#define MACHNET_CHANNEL_NAME_MAX_LEN 256
  char name[MACHNET_CHANNEL_NAME_MAX_LEN];
  MachnetChannelCtrlCtx_t ctrl_ctx;  // Control channel's specific metadata.
  MachnetChannelDataCtx_t data_ctx;  // Dataplane channel's specific metadata.

  MachnetRingSlot_t
      tmp_buffer_indices[MACHNET_MSG_MAX_LEN / MACHNET_MIN_CHANNEL_BUFFER_SIZE];
} __attribute__((aligned(CACHE_LINE_SIZE)));
typedef struct MachnetChannelCtx MachnetChannelCtx_t;
/**
 * Machnet channel statistics.
 *
 * TODO(ilias): At the moment it contains statistics for the application side.
 */
struct MachnetChannelStats {
  MachnetChannelAppStats_t a_stats;
} __attribute__((aligned(CACHE_LINE_SIZE)));
/**
 * Message Buffer Header: This header is carried at the beginning of every
 * buffer of an Machnet dataplane channel.
 */
struct MachnetMsgBuf {
#define MACHNET_MSGBUF_MAGIC 0xB6B6B6B6
  const uint32_t magic;  // Magic value tagged after initialization.
  const uint32_t index;  // Index of the buffer in the buffer pool.
  const uint32_t size;   // Absolute static size of the buffer.
  const uintptr_t iova;  // IOVA address of the buffer.
#define MACHNET_MSGBUF_FLAGS_SYN (1 << 0)
#define MACHNET_MSGBUF_FLAGS_SG (1 << 1)
#define MACHNET_MSGBUF_FLAGS_FIN (1 << 2)
#define MACHNET_MSGBUF_FLAGS_CHAIN (1 << 3)
#define MACHNET_MSGBUF_NOTIFY_DELIVERY (1 << 7)
  uint8_t flags;
  MachnetFlow_t flow;  // Network flow info.
  uint32_t msg_len;    // This is the total length of the message (could be
                       // larger than the buffer size). Set in the first buffer.
  uint32_t data_len;   // Length of the data in this buffer.
  uint32_t data_ofs;   // Offset of the data in this buffer.
  // If multi-buffer message (SG), next points to next buffer index.
  uint32_t next;
  // If multi-buffer message (SG), last points to the last buffer index.
  // This is only set in the first buffer of the message.
  uint32_t last;
  uint32_t reserved1[1];
} __attribute__((aligned(CACHE_LINE_SIZE)));