bindings/rust/src/bindings.rs

/* automatically generated by rust-bindgen 0.69.4 */

pub type MachnetRingSlot_t = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MachnetFlow {
    pub src_ip: u32,
    pub dst_ip: u32,
    pub src_port: u16,
    pub dst_port: u16,
}
#[test]
fn bindgen_test_layout_MachnetFlow() {
    const UNINIT: ::std::mem::MaybeUninit<MachnetFlow> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<MachnetFlow>(),
        12usize,
        concat!("Size of: ", stringify!(MachnetFlow))
    );
    assert_eq!(
        ::std::mem::align_of::<MachnetFlow>(),
        4usize,
        concat!("Alignment of ", stringify!(MachnetFlow))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).src_ip) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetFlow),
            "::",
            stringify!(src_ip)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).dst_ip) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetFlow),
            "::",
            stringify!(dst_ip)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).src_port) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetFlow),
            "::",
            stringify!(src_port)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).dst_port) as usize - ptr as usize },
        10usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetFlow),
            "::",
            stringify!(dst_port)
        )
    );
}
pub type MachnetFlow_t = MachnetFlow;
#[repr(C)]
#[repr(align(64))]
#[derive(Debug, Copy, Clone)]
pub struct MachnetChannelDataCtx {
    pub stats_ofs: usize,
    pub ctrl_sq_ring_ofs: usize,
    pub ctrl_cq_ring_ofs: usize,
    pub machnet_ring_ofs: usize,
    pub app_ring_ofs: usize,
    pub buf_ring_ofs: usize,
    pub buffer_index_table_ofs: usize,
    pub buf_pool_ofs: usize,
    pub buf_pool_mask: usize,
    pub buf_size: u32,
    pub buf_mss: u32,
}
#[test]
fn bindgen_test_layout_MachnetChannelDataCtx() {
    const UNINIT: ::std::mem::MaybeUninit<MachnetChannelDataCtx> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<MachnetChannelDataCtx>(),
        128usize,
        concat!("Size of: ", stringify!(MachnetChannelDataCtx))
    );
    assert_eq!(
        ::std::mem::align_of::<MachnetChannelDataCtx>(),
        64usize,
        concat!("Alignment of ", stringify!(MachnetChannelDataCtx))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).stats_ofs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelDataCtx),
            "::",
            stringify!(stats_ofs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ctrl_sq_ring_ofs) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelDataCtx),
            "::",
            stringify!(ctrl_sq_ring_ofs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ctrl_cq_ring_ofs) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelDataCtx),
            "::",
            stringify!(ctrl_cq_ring_ofs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).machnet_ring_ofs) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelDataCtx),
            "::",
            stringify!(machnet_ring_ofs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).app_ring_ofs) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelDataCtx),
            "::",
            stringify!(app_ring_ofs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).buf_ring_ofs) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelDataCtx),
            "::",
            stringify!(buf_ring_ofs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).buffer_index_table_ofs) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelDataCtx),
            "::",
            stringify!(buffer_index_table_ofs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).buf_pool_ofs) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelDataCtx),
            "::",
            stringify!(buf_pool_ofs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).buf_pool_mask) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelDataCtx),
            "::",
            stringify!(buf_pool_mask)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).buf_size) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelDataCtx),
            "::",
            stringify!(buf_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).buf_mss) as usize - ptr as usize },
        76usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelDataCtx),
            "::",
            stringify!(buf_mss)
        )
    );
}
pub type MachnetChannelDataCtx_t = MachnetChannelDataCtx;
#[repr(C)]
#[repr(align(64))]
#[derive(Debug, Copy, Clone)]
pub struct MachnetChannelCtrlCtx {
    pub req_id: usize,
}
#[test]
fn bindgen_test_layout_MachnetChannelCtrlCtx() {
    const UNINIT: ::std::mem::MaybeUninit<MachnetChannelCtrlCtx> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<MachnetChannelCtrlCtx>(),
        64usize,
        concat!("Size of: ", stringify!(MachnetChannelCtrlCtx))
    );
    assert_eq!(
        ::std::mem::align_of::<MachnetChannelCtrlCtx>(),
        64usize,
        concat!("Alignment of ", stringify!(MachnetChannelCtrlCtx))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).req_id) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelCtrlCtx),
            "::",
            stringify!(req_id)
        )
    );
}
pub type MachnetChannelCtrlCtx_t = MachnetChannelCtrlCtx;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MachnetChannelAppBufferCache {
    pub count: u32,
    pub indices: [MachnetRingSlot_t; 64usize],
}
#[test]
fn bindgen_test_layout_MachnetChannelAppBufferCache() {
    const UNINIT: ::std::mem::MaybeUninit<MachnetChannelAppBufferCache> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<MachnetChannelAppBufferCache>(),
        260usize,
        concat!("Size of: ", stringify!(MachnetChannelAppBufferCache))
    );
    assert_eq!(
        ::std::mem::align_of::<MachnetChannelAppBufferCache>(),
        4usize,
        concat!("Alignment of ", stringify!(MachnetChannelAppBufferCache))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).count) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelAppBufferCache),
            "::",
            stringify!(count)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).indices) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelAppBufferCache),
            "::",
            stringify!(indices)
        )
    );
}
pub type MachnetChannelAppBufferCache_t = MachnetChannelAppBufferCache;
#[doc = " The `MachnetChannelCtx' holds all the metadata information (context) of an\n Machnet Channel.\n\n It is always located at the beginning of the shared memory area."]
#[repr(C)]
#[repr(align(64))]
#[derive(Debug, Copy, Clone)]
pub struct MachnetChannelCtx {
    pub magic: u32,
    pub version: u16,
    pub size: u64,
    pub name: [::std::os::raw::c_char; 256usize],
    pub __bindgen_padding_0: [u64; 6usize],
    pub ctrl_ctx: MachnetChannelCtrlCtx_t,
    pub data_ctx: MachnetChannelDataCtx_t,
    pub app_buffer_cache: MachnetChannelAppBufferCache_t,
}
#[test]
fn bindgen_test_layout_MachnetChannelCtx() {
    const UNINIT: ::std::mem::MaybeUninit<MachnetChannelCtx> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<MachnetChannelCtx>(),
        832usize,
        concat!("Size of: ", stringify!(MachnetChannelCtx))
    );
    assert_eq!(
        ::std::mem::align_of::<MachnetChannelCtx>(),
        64usize,
        concat!("Alignment of ", stringify!(MachnetChannelCtx))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).magic) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelCtx),
            "::",
            stringify!(magic)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).version) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelCtx),
            "::",
            stringify!(version)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).size) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelCtx),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelCtx),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ctrl_ctx) as usize - ptr as usize },
        320usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelCtx),
            "::",
            stringify!(ctrl_ctx)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).data_ctx) as usize - ptr as usize },
        384usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelCtx),
            "::",
            stringify!(data_ctx)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).app_buffer_cache) as usize - ptr as usize },
        512usize,
        concat!(
            "Offset of field: ",
            stringify!(MachnetChannelCtx),
            "::",
            stringify!(app_buffer_cache)
        )
    );
}
#[doc = " The `MachnetChannelCtx' holds all the metadata information (context) of an\n Machnet Channel.\n\n It is always located at the beginning of the shared memory area."]
pub type MachnetChannelCtx_t = MachnetChannelCtx;
#[doc = " @brief Descriptor for SG data that constitute a message.\n\n This structure resembles `struct iovec` (check writev(2))."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MachnetIovec {
    #[doc = "< Pointer to the beginning of the SG data."]
    pub base: *mut ::std::os::raw::c_void,
    #[doc = "< Length of the SG data."]
    pub len: usize,
}
